# CAOS_2_course_MIPT

ejudge_3_sem/constest4/: 0.S  1.S  2.S  3.S  CMakeLists.txt  a.out  main.c  main.s  script.sh  sreh.S
ejudge_3_sem/contest1/: 0.sh  1.sh  popa.csv  test  test.sh
ejudge_3_sem/contest10/: 0_.c  0_exec.c  0_input.txt  1_.c  2.c  2_review.c  CMakeLists.txt  a.out  in.out  input.c  input.txt  main.c
ejudge_3_sem/contest11/: 0.c  1.c  2.c  CMakeLists.txt  a.out  check.c  gleb.c  input.txt  milan.cpp
ejudge_3_sem/contest12/: 0.c  1.c  2.c  CMakeLists.txt  a.out  b.out  input.txt  main.c  my_prog.c  vlad.c
ejudge_3_sem/contest2/: 0.c  1.c  2.c  3.c  4.c  CMakeLists.txt  a.out  test.c  zero.c
ejudge_3_sem/contest3/: 0.S  1.S  2.S  CMakeLists.txt  a.out  asm.c  hello.c  hello.s  serg.S
ejudge_3_sem/contest5/: 0.1.S  0.S  1.S  a.out  chill.S  main.c  script.sh
ejudge_3_sem/contest6/: 0.S  1.1.S  1.S  CMakeLists.txt  a.out  main.c  main1.c  s.S  script.sh
ejudge_3_sem/contest7/: 0.c  1.c  1.s  2.S  3.S  3_sergio.S  3cheat.S  CMakeLists.txt  a.out  file.txt  output.txt  test.S
ejudge_3_sem/contest8/: 0.c  1.c  2.c  3.c  CMakeLists.txt  a.out  first.txt  in.c  input.txt  num.txt  other.txt  second.txt
ejudge_3_sem/contest9/: 0.c  0_not.c  (+10 more)
ejudge_4_sem/contest10/: 0.c  1.cpp  CMakeLists.txt  contest10  noname.cpp  serzio.cpp
ejudge_4_sem/contest10/mount_1/mine/: oi.txt
ejudge_4_sem/contest10/mount_1/obeme/: 234.txt
ejudge_4_sem/contest10/mount_2/mine/: oi.txt
ejudge_4_sem/contest12/: 1.py  CMakeLists.txt  csv.c  matrix.c  primes.c  serz.c  setup.py  test.c
(+69 files in other folders)
